--- a/experiments/causals-1.html
+++ b/experiments/causals-1.html
@@ -31,7 +31,7 @@
     <link href="css/local-style.css" rel="stylesheet" type="text/css"/>
 
     <!-- experiment file -->
-    <script src="js/prior-1.js"></script>
+    <script src="js/causals-1.js"></script>
     <script src="js/stims.js"></script>
 
     <script src="_shared/js/uniqueturker.js"></script>
