clean up table and prompts

--- a/experiments/causals-2.html
+++ b/experiments/causals-2.html
@@ -80,7 +80,7 @@
     <p class="data">
 
     </p>
-    <table style="width:40%">
+    <table style="width:100%" table-layout="fixed">
       <tr align="center">
         <th id="h-1"></th>
         <th id="h0"></th>
