between subjects prior,listener,speaker

--- a/experiments/causals-2.html
+++ b/experiments/causals-2.html
@@ -125,21 +125,39 @@
       </tr>
     </table>
 
-    <p class="question0"></p>
+    <!-- STRUCTURED PRIOR Questions -->
+    <!-- <p class="question0"></p>
     <table id="slider_table0" class="slider_table">
       <tr><td class="left">unlikely</td><td class="right">likely</td></tr>
       <tr><td colspan="2"><div id="single_slider0" class="slider"></div></td></tr>
-    </table>
+    </table> -->
 
-    <p class="question1"> </p>
+    <!-- <p class="question1"> </p>
     <p class="slider_number" id="prior_number"></p>
     <table id="slider_table1" class="slider_table">
       <tr><td class="left">0</td><td class="right">99</td></tr>
       <tr><td colspan="2"><div id="single_slider1" class="slider"></div></td></tr>
+    </table> -->
+
+    <!-- DIRECT PRIOR Question -->
+    <p class="question0"></p>
+    <p class="slider_number" id="prior_number"></p>
+    <table id="slider_table0" class="slider_table">
+      <tr><td class="left">0</td><td class="right">100</td></tr>
+      <tr><td colspan="2"><div id="single_slider0" class="slider"></div></td></tr>
     </table>
 
     <p class="task_prompt"> </p>
     <p class="question2"> </p>
+
+    <!-- SPEAKER Question -->
+
+    <table id="slider_table1" class="slider_table">
+      <tr><td class="left">no</td><td class="right">yes</td></tr>
+      <tr><td colspan="2"><div id="single_slider1" class="slider"></div></td></tr>
+    </table>
+
+    <!-- LISTENER Question -->
 
     <p class="slider_number" id="listener_number"></p>
     <table id="slider_table2" class="slider_table">
@@ -147,14 +165,16 @@
       <tr><td colspan="2"><div id="single_slider2" class="slider"></div></td></tr>
     </table>
 
-    <div id="speaker_choices">
+
+
+    <!-- <div id="speaker_choices">
       <label>
         <input type="radio"  name="speaker" value="No"/>No
       </label>
       <label>
         <input type="radio"  name="speaker" value="Yes"/>Yes
       </label>
-    </div>
+    </div> -->
 
     <button onclick="_s.button()">Continue</button>
     <p class="err">Please respond to the questions.</p>
