--- a/experiments/causals-5.html
+++ b/experiments/causals-5.html
@@ -145,11 +145,11 @@
 
     <!-- DIRECT PRIOR Question -->
     <p class="question0"></p>
-    <p class="slider_number" id="prior_number"></p>
+    <!-- <p class="slider_number" id="prior_number"></p>
     <table id="slider_table0" class="slider_table">
       <tr><td class="left">0</td><td class="right">100</td></tr>
       <tr><td colspan="2"><div id="single_slider0" class="slider"></div></td></tr>
-    </table>
+    </table> -->
 
 
     <table id="multi_slider_table" class="slider_table">
@@ -169,11 +169,11 @@
 
     <!-- LISTENER Question -->
 
-    <p class="slider_number" id="listener_number"></p>
+    <!-- <p class="slider_number" id="listener_number"></p>
     <table id="slider_table2" class="slider_table">
       <tr><td class="left">0</td><td class="right">100</td></tr>
       <tr><td colspan="2"><div id="single_slider2" class="slider"></div></td></tr>
-    </table>
+    </table> -->
 
 
     <div id="speaker_choices">
