refined stimuli; error handling

--- a/experiments/causals-6.html
+++ b/experiments/causals-6.html
@@ -45,9 +45,7 @@
   <div class="slide" id="i0" >
     <img src="_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will be asked one question about a hypothetical situation.
-      The HIT should take approximately 2 minutes.
-      Please pay attention, thanks!</p>
+    <p id="instruct-text">You will be asked short questions about hypothetical situations. The HIT should take approximately 5 minutes. Please pay attention, thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
 
     <p style="font-family:courier; font-size:14px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Causes 318</strong>) throughout the next few days. Please attempt only one HIT in this series. You will not be allowed to complete multiple HITs in this series.</p>
@@ -61,12 +59,10 @@
     <p class="instruct">
       You are part of group of astronaut-scientists exploring distant planets in the newly discovered Silky Bay galaxy.
       Your scientist team is trying to learn about different things on each planet.
-      Some of them are inhabited by friendly, advanced civilzations.
-      Others are uninhabited.
       <br><br>
       You will visit <span id="total-num">{{}}</span> different planets.
       On each planet, you will see the results of an experiment that your team carried out on the planet.
-      You will then answer a few questions about what you think is happening on the planet.
+      You will then answer a few questions about what you think is happening.
       <br><br>
       Press continue to begin.
       <!--
