fix prior to rare; make one trial

--- a/experiments/causals-6.html
+++ b/experiments/causals-6.html
@@ -45,7 +45,7 @@
   <div class="slide" id="i0" >
     <img src="_shared/images/cocologo.png" alt="Stanford CoCoLab" id="cocologo"></img>
     <p id="cocolab">Stanford CoCoLab</p>
-    <p id="instruct-text">You will be asked short questions about hypothetical situations. The HIT should take approximately 5 minutes. Please pay attention, thanks!</p>
+    <p id="instruct-text">You will be asked short questions about a hypothetical situation. The HIT should take approximately 2 minutes. Please pay attention, thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
 
     <p style="font-family:courier; font-size:14px; text-align: justify;">Please note: There will be multiple posted versions of this HIT (name: <strong>Language Study - Causes 318</strong>) throughout the next few days. Please attempt only one HIT in this series. You will not be allowed to complete multiple HITs in this series.</p>
