add another catch question

--- a/experiments/causals-8.html
+++ b/experiments/causals-8.html
@@ -214,8 +214,13 @@
       </select>
 
       <br><br>
+
+      <p>Please input one of the numerical results you saw on the first page.</p>
+      <textarea id="resultRetrieval" rows="1" cols="3"></textarea>
+      <br><br>
+
       <button onclick="_s.button()">Continue</button>
-      <p class="err">Please respond to the question.</p>
+      <p class="err">Please respond to the questions.</p>
 
   </div>
 
